# Project-LLVM-IR-Analysis-Optimization-Passes

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VERIFICATION.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
docs/: COMPILER_FUNDAMENTALS.md  DESIGN.md  LEARNING_ROADMAP.md  PUBLISHING.md  SECURE_CODING.md
examples/c/: strength_reduction.c
examples/ir/: handwritten.ll
include/LLVMPassLab/: FunctionMetrics.h  Plugin.h  SafeStrengthReduction.h
lib/: FunctionMetrics.cpp  Plugin.cpp  SafeStrengthReduction.cpp
scripts/: bootstrap_ubuntu.sh  build.sh  check_format.sh  clean.sh  common.sh  compare_targets.sh  generate_ir.sh  run_demo.sh  test.sh
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/Analysis/: function-metrics.ll
tests/Transforms/: pipeline-composition.ll  safe-strength-reduction-negative.ll  safe-strength-reduction.ll
